# libespi

./: LICENSE  MAINTAINERS  README.md  meson.build
include/: aspeed-espi.h  espi_channel.hpp  espi_channel_internal.hpp  espi_oob_channel.hpp
include/linux/: aspeed-espi-ioc.h
src/: espi_channel.cpp  espi_cmd.cpp  espi_oob_channel.cpp  tick.cpp
